--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    
+    <input type="text" id=myText>
+
     <script type="text/javascript">
         var config = {
             type: Phaser.AUTO,
@@ -28,7 +31,7 @@
                 arcade: {
                     gravity: { y: 300 },
                     debug: false
-                }textbox
+                }
             }
         };
 
